--- a/nemacs.org
+++ b/nemacs.org
@@ -13,7 +13,7 @@
 
 Я давно использую =org-mode= для формирования файла инициализации Emacs, периодически переписывая его с нуля и перенося в него только самое необходимое из предыдущей версии. Раньше я комментировал все на английском языке, но в сети и так полно примеров на английском, так что пусть пока будет на русском.
 
-Так как недавно я перебрался с Gnome на i3wm, я стал использовать emacs-daemon и терминальную версию редактора, так что наведение красоты в этот раз пока сюда не попало.
+Так как недавно я перебрался с Gnome на i3wm, я стал использовать emacs-daemon и терминальную версию редактора, так что наведение красоты в этот раз пока сюда не попало (кое-что, тем не менее, уже добавлено).
 
 Вот конфигурации других людей, в которых я когда-то почерпнул что-то интересное (их, вообще-то, было много больше, но остальных сейчас не припомню). Порядок - алфавитный:
 - Bozhidar Batsov [[https://github.com/bbatsov/emacs.d][GitHub]]
@@ -68,8 +68,18 @@
      (dolist (library '(dash dash-functional s f))
        (eval `(use-package ,library :ensure t)))
    #+end_src
+   
+** Переопределение =custom-file=
 
-** Сохранение папки с конфигурацией
+   Дабы не захламлять =.emacs= автоматически генерируемым мусором, перенаправляем его в другом месте.
+
+   #+begin_src emacs-lisp
+     (setq custom-file "~/.emacs.d/custom.el")
+     (when (file-exists-p custom-file)
+       (load custom-file))
+   #+end_src
+
+** Сохранение пути к конфигу
 
    Дабы иметь возможность удобно обращаться к другим файлам в репозитории и открывать конфиг по горячим клавишам, запомним, где что лежит.
 
@@ -78,14 +88,6 @@
            n-nemacs-dir  (f-dirname n-nemacs-file))
    #+end_src
    
-** Не показывать стартовый экран
-
-   Не знаю, скольким людям он пригодился, как по мне - вещь не особенно полезная.
-
-   #+begin_src emacs-lisp
-     (setq inhibit-startup-screen 't)
-   #+end_src
-
 ** Отключение бекапов и мусора возле рабочих файлов
 
    Переносим все создаваемые редактором временные файлы и бекапы в =~/.emacs.d/backups/=. Локфайлы - выключаем.
@@ -100,16 +102,6 @@
      (setq create-lockfiles nil)
    #+end_src
    
-** Переопределение =custom-file=
-
-   Дабы не захламлять =.emacs= мусором, сохраняем его в другом месте.
-
-   #+begin_src emacs-lisp
-     (setq custom-file "~/.emacs.d/custom.el")
-     (when (file-exists-p custom-file)
-       (load custom-file))
-   #+end_src
-   
 ** Заменяем =yes-or-no-p= на =y-or-n-p= повсеместно
 
    Жизнь слишком коротка, чтобы писать =yes= или =no=.
@@ -118,6 +110,46 @@
 
    #+begin_src emacs-lisp
      (fset #'yes-or-no-p #'y-or-n-p)
+   #+end_src
+   
+** Не показывать стартовый экран
+
+   Не знаю, скольким людям он пригодился, как по мне - вещь не особенно полезная.
+
+   #+begin_src emacs-lisp
+     (setq inhibit-startup-screen 't)
+   #+end_src
+
+** Сокрытие верхнего меню и тулбара
+
+   Сначала оставил менюбар, чтобы проще было находить границы окна, но во-первых, он выбивается из темы оформления, а во-вторых, границы окна лучше выделить средствами оконного менеджера, так что опять скрываю.
+
+   Тулбар скрываю за компанию - в терминальной версии редактора его все равно нет.
+
+   #+begin_src emacs-lisp
+     (menu-bar-mode -1)
+     (tool-bar-mode -1)
+   #+end_src
+   
+** Цветовая тема
+
+   Сначала думал, достаточно будет настроить цвета в терминале, но нет... Использую дефолтную темную тему из [[https://github.com/belak/base16-emacs][base16]], ту же, что и [[https://github.com/chriskempson/base16-xresources/tree/master/xresources][в терминале]].
+
+   #+begin_src emacs-lisp
+     (use-package base16-theme
+       :ensure    t
+       :config
+       (load-theme 'base16-default-dark t))
+   #+end_src
+
+** Украшательство модлайна с =powerline=
+
+   Временно добавлю - пока не определился, буду ли его использовать.
+
+   #+begin_src emacs-lisp
+     (use-package powerline
+       :ensure    t
+       :config    (powerline-center-theme))
    #+end_src
    
 ** =Diminish= для сокрытия минорных режимов
@@ -198,6 +230,8 @@
    #+end_src
 
 ** Мажорные режимы для различных языков программирования и разметки
+
+   За пару месяцев их набирается полтора-два десятка, так что буду добавлять по мере использования.
 
 *** =Web-mode= для верстки
 
