Добавлен перенос по словам для org-mode

--- a/nemacs.org
+++ b/nemacs.org
@@ -300,6 +300,13 @@
        :ensure    t
        :defer     t)
    #+end_src
+
+   Всегда включаем перенос по словам в длинных строках для org-mode (практика показала, что выключать его приходится многократно реже, чем включать).
+
+   #+begin_src emacs-lisp
+     (add-hook 'org-mode-hook 'visual-line-mode)
+   #+end_src
+
 ** Настройка шаблонов для =org-capture=
 
    =org-capture= это крайне полезная штука, позволяющая быстро делать заметки и комментарии из любого места, сохраняя их в указанных местах. В моем случае org-capture вызывается командой =C-c c=.
