--- a/nemacs.org
+++ b/nemacs.org
@@ -11,6 +11,8 @@
   ;; /_/ |_/_____/_/ /_/ /_/\__,_/\___/____/
 #+end_src
 
+#+HTML: <img src="https://raw.githubusercontent.com/inickey/nemacs/master/screenshot.jpg" style="width:100%" alt="screenshot">
+
 Я давно использую =org-mode= для формирования файла инициализации Emacs, периодически переписывая его с нуля и перенося в него только самое необходимое из предыдущей версии. Раньше я комментировал все на английском языке, но в сети и так полно примеров на английском, так что пусть пока будет на русском.
 
 Так как недавно я перебрался с Gnome на i3wm, я стал использовать emacs-daemon и терминальную версию редактора, так что наведение красоты в этот раз пока сюда не попало (кое-что, тем не менее, уже добавлено).
