--- a/nemacs.org
+++ b/nemacs.org
@@ -291,58 +291,85 @@
         :ensure    t)
     #+end_src
 
-* Самоорганизация
+* Жизнедеятельность
 
-** Установка свежего =org-mode=
+** Самоорганизация
 
-   Устанавливаем свежую версию =org-mode= c дополнениями из официального репозитория.
+*** Установка свежего =org-mode=
+
+    Устанавливаем свежую версию =org-mode= c дополнениями из официального репозитория.
+
+    #+begin_src emacs-lisp
+      (use-package org-plus-contrib
+        :ensure    t
+        :defer     t)
+    #+end_src
+
+    Всегда включаем перенос по словам в длинных строках для org-mode (практика показала, что выключать его приходится многократно реже, чем включать).
+
+    #+begin_src emacs-lisp
+      (add-hook 'org-mode-hook 'visual-line-mode)
+    #+end_src
+
+*** Настройка шаблонов для =org-capture=
+
+    =org-capture= это крайне полезная штука, позволяющая быстро делать заметки и комментарии из любого места, сохраняя их в указанных местах. В моем случае org-capture вызывается командой =C-c c=.
+
+    #+begin_src emacs-lisp
+      (global-set-key (kbd "C-c c") #'org-capture)
+    #+end_src
+
+    Мои org-файлы обычно лежат в папке =~/Org=, которая, в свою очередь, является симлинком на папку Org в облаке.
+
+    #+begin_src emacs-lisp
+      (setq n-org-files-dir "~/Org"
+            n-org-main      (f-join n-org-files-dir "main.org")
+            n-org-logbook   (f-join n-org-files-dir "logbook.org.gpg"))
+    #+end_src
+
+    Шаблоны, которые я использую:
+    - =i= inbox   Попадает в Inbox для последующего разбора, схоже с [[https://ru.wikipedia.org/wiki/Getting_Things_Done][GTD]].
+    - =t= todo    Попадает в Inbox в виде TODO-заметки для последующего разбора, схоже с [[https://ru.wikipedia.org/wiki/Getting_Things_Done][GTD]].
+    - =l= logbook Используется для фиксации различных событий и мыслей в шифрованном файле, отдаленно напоминает дневник, только не дневник.
+
+    #+begin_src emacs-lisp
+      (setq n-capture-templates-dir (f-join n-nemacs-dir "org-templates"))
+    #+end_src
+
+    #+begin_src emacs-lisp
+      (setq org-capture-templates
+            `(("i" "Plain inbox entry"
+               entry  (file+headline ,n-org-main "Inbox")
+               (file ,(f-join n-capture-templates-dir "inbox-plain.org")))
+              ("t" "Todo inbox entry"
+               entry  (file+headline ,n-org-main "Inbox")
+               (file ,(f-join n-capture-templates-dir "inbox-todo.org")))
+              ("l" "Logbook entry"
+               entry  (file+olp+datetree ,n-org-logbook)
+               (file ,(f-join n-capture-templates-dir "logbook.org")))))
+    #+end_src
+
+** Почта (=Gnus=)
+
+   Вообще, для работы с почтой я использую [[https://neomutt.org][neomutt]]. Но поскольку я подписан на множество списков рассылки, где часто присылают код, либо самому приходится отправлять фрагменты кода, сразу использовать редактор бывает очень удобно.
+
+   Извлечением почты у меня занимается [[https://www.offlineimap.org/][offlineimap]], каждые две минуты по крону забирающий почту с сервера по IMAP и аккуратно складывающий ее в папку =~/.mail= в формате Maildir. Помимо того, что это позволяет более полноценно работать с почтой, выбирая инструмент под задачу (иногда просто шелл), так появляется возможность разбирать почту из оффлайна - для десктопа так себе достижение, а для ноутбука бывает очень полезно.
 
    #+begin_src emacs-lisp
-     (use-package org-plus-contrib
-       :ensure    t
-       :defer     t)
+     (setq gnus-select-method '(nnmaildir "nickey" (directory "~/.mail")))
    #+end_src
 
-   Всегда включаем перенос по словам в длинных строках для org-mode (практика показала, что выключать его приходится многократно реже, чем включать).
+   Ну а поскольку можно разбирать почту в оффлайне, почему бы ее в оффлайне не писать? Я использую [[https://marlam.de/msmtp/][msmtp]] для отправки почты. В пакете с msmtp идут скрипты =msmtp-enqueue.sh=, =msmtp-listqueue.sh= и =msmtp-runqueue.sh= для работы с очередью отправки. Использую msmtp-enqueue для отправки почты, а msmtp-runqueue запускается по крону для отправки почты.
 
    #+begin_src emacs-lisp
-     (add-hook 'org-mode-hook 'visual-line-mode)
+     (setq message-send-mail-function #'message-send-mail-with-sendmail
+           sendmail-program           "~/.local/bin/msmtp-enqueue")
    #+end_src
 
-** Настройка шаблонов для =org-capture=
-
-   =org-capture= это крайне полезная штука, позволяющая быстро делать заметки и комментарии из любого места, сохраняя их в указанных местах. В моем случае org-capture вызывается командой =C-c c=.
+   По умолчанию Gnus начинает хозяйничать в домашней папке и создавать в ней папки =Mail= и =News=. Спрячем их в глубинах =~/.emacs.d=.
 
    #+begin_src emacs-lisp
-     (global-set-key (kbd "C-c c") #'org-capture)
-   #+end_src
-
-   Мои org-файлы обычно лежат в папке =~/Org=, которая, в свою очередь, является симлинком на папку Org в облаке.
-
-   #+begin_src emacs-lisp
-     (setq n-org-files-dir "~/Org"
-           n-org-main      (f-join n-org-files-dir "main.org")
-           n-org-logbook   (f-join n-org-files-dir "logbook.org.gpg"))
-   #+end_src
-
-   Шаблоны, которые я использую:
-   - =i= inbox   Попадает в Inbox для последующего разбора, схоже с [[https://ru.wikipedia.org/wiki/Getting_Things_Done][GTD]].
-   - =t= todo    Попадает в Inbox в виде TODO-заметки для последующего разбора, схоже с [[https://ru.wikipedia.org/wiki/Getting_Things_Done][GTD]].
-   - =l= logbook Используется для фиксации различных событий и мыслей в шифрованном файле, отдаленно напоминает дневник, только не дневник.
-
-   #+begin_src emacs-lisp
-     (setq n-capture-templates-dir (f-join n-nemacs-dir "org-templates"))
-   #+end_src
-
-   #+begin_src emacs-lisp
-     (setq org-capture-templates
-           `(("i" "Plain inbox entry"
-              entry  (file+headline ,n-org-main "Inbox")
-              (file ,(f-join n-capture-templates-dir "inbox-plain.org")))
-             ("t" "Todo inbox entry"
-              entry  (file+headline ,n-org-main "Inbox")
-              (file ,(f-join n-capture-templates-dir "inbox-todo.org")))
-             ("l" "Logbook entry"
-              entry  (file+olp+datetree ,n-org-logbook)
-              (file ,(f-join n-capture-templates-dir "logbook.org")))))
+     (setq message-directory  "~/.emacs.d/mail/"
+           gnus-directory     "~/.emacs.d/news/"
+           nnfolder-directory "~/.emacs.d/mail/archive/")
    #+end_src
