--- a/nemacs.org
+++ b/nemacs.org
@@ -231,10 +231,20 @@
        :bind      (("C-x g" . #'magit-status)))
    #+end_src
 
+** =Writeroom= для работы над текстами
+
+   Если в процессе кодинга информация вроде имени открытого файла, текущей git-ветки, положения в документе идут строго на пользу, то при работе над постами в блог, документацией и tex-документами, она только мешает. =Writeroom= отображает только текущий буфер, прячет модлайн, ограничивает текст по ширине и смещает его в центр окна (не путать с выравниванием по центру). Вкупе с переводом окна в фулл-скрин и увеличением шрифта это сильно помогает сосредоточиться на тексте.
+
+   #+begin_src emacs-lisp
+     (use-package writeroom-mode
+       :ensure    t
+       :bind      ("M-n M-w" . #'writeroom-mode))
+   #+end_src
+
 ** Мажорные режимы для различных языков программирования и разметки
 
    За пару месяцев их набирается полтора-два десятка, так что буду добавлять по мере использования.
-
+   
 *** =Web-mode= для верстки
 
     Незаменимая вещь для работы с html, php, twig и прочими html-подобными файлами. Умеет расставлять отступы, автоматически закрывает открываемые теги, комментирует-раскомментирует блок, переименовывает тег и многое другое.
