Добавлена подсветка парных скобок

--- a/nemacs.org
+++ b/nemacs.org
@@ -207,6 +207,19 @@
        :bind      (("C-c SPC" . #'ace-jump-mode)))
    #+end_src
    
+** Подсветка парных скобок
+
+   Для лисповых языков, да и не только, переоценить эту функцию очень сложно...
+
+   #+begin_src emacs-lisp
+     (show-paren-mode 1)
+   #+end_src
+
+   С помощью переменной =show-paren-style= можно установить способ подсветки:
+   - ='expression= всё выражение между парными скобками
+   - ='parenthesis= только сами скобки
+   - ='mixed= смешанный вариант - в случае, если парная скобка находится в области видимости экрана, будут подсвечены только скобки, в противном случае - все выражение.
+   
 ** Автодополнение скобок, кавычек, etc
 
    Раньше я использовал =autopair=, но сейчас заглянул к нему в репозиторий и как-то там безрадостно. Случайно наткнулся на =smartparens=, его и буду пробовать - время покажет.
