--- a/nemacs.org
+++ b/nemacs.org
@@ -231,6 +231,29 @@
    - ='parenthesis= только сами скобки
    - ='mixed= смешанный вариант - в случае, если парная скобка находится в области видимости экрана, будут подсвечены только скобки, в противном случае - все выражение.
    
+** Сниппеты с =yasnippet=
+
+   Современные языки и фреймворки, вроде как, сильно сократили количество бойлерплейт-кода. Но, во-первых, не до нуля, а во-вторых, не все.
+
+   Добавляем директорию =snippets= в список директорий для поиска сниппетов. Поскольку она добавляется в начало списка, она же будет путем сохранения для сниппетов, добавляемых с помощью =yas-new-snippet=.
+
+   #+begin_src emacs-lisp
+     (use-package yasnippet
+       :ensure t
+       :config
+       (progn
+         (add-to-list 'yas-snippet-dirs (f-join n-nemacs-dir "snippets"))
+         (yas-global-mode 1)))
+   #+end_src
+
+   Чтобы не создавать все сниппеты руками, подключаем пакет =yasnippet-snippets=, в который входит множество готовых сниппетов для большого количества мажорных режимов.
+
+   #+begin_src emacs-lisp
+     (use-package yasnippet-snippets
+       :ensure    t
+       :after     yasnippet)
+   #+end_src
+
 ** Автодополнение скобок, кавычек, etc
 
    Раньше я использовал =autopair=, но сейчас заглянул к нему в репозиторий и как-то там безрадостно. Случайно наткнулся на =smartparens=, его и буду пробовать - время покажет.
