--- a/nemacs.org
+++ b/nemacs.org
@@ -448,6 +448,19 @@
                                          ".archive.org::** Из файла %s"))
     #+end_src
 
+** [[https://ru.wikipedia.org/wiki/%25D0%259C%25D0%25B5%25D1%2582%25D0%25BE%25D0%25B4_%25D0%25BF%25D0%25BE%25D0%25BC%25D0%25B8%25D0%25B4%25D0%25BE%25D1%2580%25D0%25B0][Метод помидора]] ([[https://github.com/TatriX/pomidor][pomidor]])
+
+   По правде сказать, я не так часто пользуюсь этим методом, но иногда все же пользуюсь. Поэтому пусть будет на готове.
+
+   #+begin_src emacs-lisp
+     (use-package pomidor
+       :ensure    t
+       :bind      (("M-n M-p" . #'pomidor))
+       :config
+       (setq pomidor-play-sound-file #'ignore
+             alert-default-style     'libnotify))
+   #+end_src
+   
 ** Почта (=Gnus=)
 
    Вообще, для работы с почтой я использую [[https://neomutt.org][neomutt]]. Но поскольку я подписан на множество списков рассылки, где часто присылают код, либо самому приходится отправлять фрагменты кода, сразу использовать редактор бывает очень удобно.
