--- a/nemacs.org
+++ b/nemacs.org
@@ -200,6 +200,14 @@
      (global-set-key (kbd "C-w") #'n-kill-region-or-backward-word)
    #+end_src
   
+** Отключение сворачивания по =C-z=
+
+   В терминале =C-z= отправляет приложение в фоновый режим, что в случае с емаксом, который сам терминал открыть может, доставляет только лишние неудобства при случайном нажатии. Кто-то предпочитает назначить на это сочетание отмену последнего действия, мне же будет спокойнее, если оно вообще ничего делать не будет.
+
+   #+begin_src emacs-lisp
+     (global-set-key (kbd "C-z") #'ignore)
+   #+end_src
+
 ** Переключение буферов по =C-x C-b=
 
    =bs-show= начал использовать еще в первые дни использования Emacs, с тех пор чего только не перепробовал, последней попыткой был =helm-buffers-list=, но как по мне, это менее удобно, чем открыть список буферов, в котором обычно не более 5-10 штук и клавишами =n= и =p= выбрать нужный.
