--- a/nemacs.org
+++ b/nemacs.org
@@ -311,6 +311,7 @@
         (progn
           (add-to-list 'auto-mode-alist '("\\.phtml\\'" . web-mode))
           (add-to-list 'auto-mode-alist '("\\.html?\\'" . web-mode))
+          (add-to-list 'auto-mode-alist '("\\.twig\\'"  . web-mode))
           (add-to-list 'web-mode-engines-alist '("php"  . "\\.php\\'"))))
     #+end_src
 
