yстановлен шрипт для GUI, спрятаны скроллбары

--- a/nemacs.org
+++ b/nemacs.org
@@ -123,15 +123,26 @@
      (setq inhibit-startup-screen 't)
    #+end_src
 
-** Сокрытие верхнего меню и тулбара
+** Шрифт в GUI
+
+   Все таки периодически запускаю emacs в GUI, поэтому нужно установить фонт.
+
+   #+begin_src emacs-lisp
+     (let ((default-font "Iosevka 16"))
+       (set-default-font default-font)
+       (add-to-list 'default-frame-alist `(font . ,default-font)))
+   #+end_src
+
+** Сокрытие верхнего меню, тулбара и скроллбара
 
    Сначала оставил менюбар, чтобы проще было находить границы окна, но во-первых, он выбивается из темы оформления, а во-вторых, границы окна лучше выделить средствами оконного менеджера, так что опять скрываю.
 
-   Тулбар скрываю за компанию - в терминальной версии редактора его все равно нет.
+   Тулбар и скроллбар скрываю за компанию - в терминальной версии редактора его все равно нет.
 
    #+begin_src emacs-lisp
      (menu-bar-mode -1)
      (tool-bar-mode -1)
+     (scroll-bar-mode -1)
    #+end_src
    
 ** Системный буфер обмена
