prevent ediff new frame creation

--- a/nemacs.org
+++ b/nemacs.org
@@ -316,6 +316,12 @@
        :bind      (("C-x g" . #'magit-status)))
    #+end_src
 
+   =ediff= создает дополнительный фрейм, что доставляет проблемы с фокусом и компоновкой окон на тайловых оконных менеджерах. Отключаем такое поведение.
+
+   #+begin_src emacs-lisp
+     (setq ediff-window-setup-function 'ediff-setup-windows-plain)
+   #+end_src
+
 ** =Writeroom= для работы над текстами
 
    Если в процессе кодинга информация вроде имени открытого файла, текущей git-ветки, положения в документе идут строго на пользу, то при работе над постами в блог, документацией и tex-документами, она только мешает. =Writeroom= отображает только текущий буфер, прячет модлайн, ограничивает текст по ширине и смещает его в центр окна (не путать с выравниванием по центру). Вкупе с переводом окна в фулл-скрин и увеличением шрифта это сильно помогает сосредоточиться на тексте.
