add lispy-mode for semantic lisp editing

--- a/nemacs.org
+++ b/nemacs.org
@@ -343,6 +343,20 @@
 
    За пару месяцев их набирается полтора-два десятка, так что буду добавлять по мере использования.
    
+*** =Лиспы=
+
+**** =lispy-mode=
+
+     Paredit не развивается, пробую вместо него сабж
+
+     #+begin_src emacs-lisp
+       (use-package lispy
+         :ensure    t
+         :diminish  lispy-mode
+         :hook      ((emacs-lisp-mode . lispy-mode)
+                     (scheme-mode . lispy-mode)))
+     #+end_src
+
 *** =Web-mode= для верстки
 
     Незаменимая вещь для работы с html, php, twig и прочими html-подобными файлами. Умеет расставлять отступы, автоматически закрывает открываемые теги, комментирует-раскомментирует блок, переименовывает тег и многое другое.
