--- a/nemacs.org
+++ b/nemacs.org
@@ -368,6 +368,15 @@
                      (scheme-mode . lispy-mode)))
      #+end_src
 
+**** =geiser= для Scheme
+
+     Иногда надо покрутить Scheme-подобные языки - [[https://www.gnu.org/software/guile/][Guile]], [[https://racket-lang.org/][Racket]]. =Geiser=, в первую очередь, предоставляет нормальный REPL для них.
+
+     #+begin_src emacs-lisp
+       (use-package geiser
+         :ensure    t)
+     #+end_src
+
 *** =Web-mode= для верстки
 
     Незаменимая вещь для работы с html, php, twig и прочими html-подобными файлами. Умеет расставлять отступы, автоматически закрывает открываемые теги, комментирует-раскомментирует блок, переименовывает тег и многое другое.
