add prettify-symbols-mode for elisp and scheme

--- a/nemacs.org
+++ b/nemacs.org
@@ -377,6 +377,16 @@
          :ensure    t)
      #+end_src
 
+**** =(lambda ())= как =(λ ())=
+
+     Так код выглядит веселее и компактнее
+
+     #+begin_src emacs-lisp
+       (use-package prog-mode
+         :hook      ((emacs-lisp-mode
+                      scheme-mode) . prettify-symbols-mode))
+     #+end_src
+
 *** =Web-mode= для верстки
 
     Незаменимая вещь для работы с html, php, twig и прочими html-подобными файлами. Умеет расставлять отступы, автоматически закрывает открываемые теги, комментирует-раскомментирует блок, переименовывает тег и многое другое.
