--- a/nemacs.org
+++ b/nemacs.org
@@ -247,6 +247,18 @@
        :bind      (("C-c SPC" . #'ace-jump-mode)))
    #+end_src
    
+** Переход между окнами с помощью =Ace Window=
+
+   Добавляет ace-jump-подобный опыт к переходу между окнами
+
+   #+begin_src emacs-lisp
+     (use-package ace-window
+       :ensure    t
+       :bind      (("C-x o" . ace-window))
+       :config
+       (setq aw-keys '(?a ?s ?d ?f ?g ?h ?j ?k ?l)))
+   #+end_src
+   
 ** Подсветка парных скобок
 
    Для лисповых языков, да и не только, переоценить эту функцию очень сложно...
